# django-poetry-action-example

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  setup.cfg  uwsgi.ini
.github/workflows/: ci.yml  docker-build.yml  lint.yml  test.yml
django_poetry_action_example/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py
polls/migrations/: 0001_initial.py
tests/polls/: test_models.py
