[tool.poetry]
name = "django-poetry-action-example"
version = "0.1.0"
description = "for side job"
authors = ["Ryuya Ikeda <rikeda71@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.9.1", extras = ["lint"]}
pytest = "^6.2.4"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = false
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 88
py_version="py38"

[tool.pysen.lint.source]
includes = ["."]
excludes = [".venv/"]
